<resources>
    <string name="app_name">HaVagas</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="havagas">HaVagas</string>
    <string name="email_pessoal">Email Pessoal</string>
    <string name="check_box_email_text">Deseja Receber Emails com atualizações e oportunidades?</string>
    <string name="residencialPhoneType">Residencial</string>
    <string name="comercialPhoneType">Comercial</string>
    <string name="telephoneHint">Telefone</string>
    <string name="havePhoneCheckbox">Possui telefone celular?</string>
    <string name="phoneHint">Telefone Celular</string>
    <string name="telefone_contato_tv">Telefone Para Contato</string>
    <string name="anoFormaturaHint">Ano de Formatura</string>
    <string name="anoConclusaoHint">Ano de Conclusão</string>
    <string name="instituicaoNomeHint">Nome da Instituição</string>
    <string name="tituloMonografiaHint">Título de Monografia</string>
    <string name="orientadorHint">Orientate</string>
    <string name="vagasInteresseHint">Vagas de Interesse</string>
    <string name="receberOportunidadesCheckBox">Deseja receber emails com atualizações de oportunidades?</string>
    <string name="enviarButton">Enviar</string>
    <string name="limparButton">Limpar</string>
    <string name="sexo">Sexo</string>
    <string name="formacaoTextView">Formação</string>
    <string name="nome_completo_tv">Nome Completo</string>
    <string name="email_para_contatotv">Email Para Contato</string>
    <string name="data_de_nascimentoTv">Data de Nascimento</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="vegas_de_interesseTv">Vegas de Interesse</string>
    <string-array name="sexOptions">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Prefiro não dizer</item>
    </string-array>
    <string-array name="formationOptions">
        <item>Fundamental e médio</item>
        <item>Graduação e especialização</item>
        <item>Mestrado e doutorado</item>
    </string-array>
</resources>