<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/havagas"
            android:gravity="center"
            android:textSize="40sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/nomeCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_completo"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:autofillHints="name"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_pessoal"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:autofillHints="emailAddress"
            app:layout_constraintTop_toBottomOf="@+id/nomeCompleto"
            app:layout_constraintBottom_toTopOf="@+id/contactTelephone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />

        <TextView
            android:id="@+id/contactTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/telefone_contato_tv"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/telephoneTypeRadioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <RadioGroup
            android:id="@+id/telephoneTypeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactTelephone"
            app:layout_constraintBottom_toTopOf="@+id/telephone">

            <RadioButton
                android:id="@+id/residentialRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/residencialPhoneType"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/comercialRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comercialPhoneType"/>

        </RadioGroup>

        <EditText
            android:id="@+id/telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:inputType="phone"
            android:hint="@string/telephoneHint"
            android:autofillHints="phone"
            app:layout_constraintTop_toBottomOf="@id/telephoneTypeRadioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/phoneCheckBox"/>

        <CheckBox
            android:id="@+id/phoneCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/havePhoneCheckbox"
            app:layout_constraintTop_toBottomOf="@id/telephone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:inputType="phone"
            android:hint="@string/phoneHint"
            android:autofillHints="phone"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/phoneCheckBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/sexOptionsSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:entries="@array/sexOptions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>